fixed Service card text not wrapping

--- a/styles/services.css
+++ b/styles/services.css
@@ -11,7 +11,6 @@
     margin: auto 10px;
     display: block;
     max-width: 100%;
-    position: absolute;
     color: hsl(39, 100%, 50%);
     letter-spacing: .025rem;
 }
